markdown support & deck.hasMinorCards
